@@ -1,4 +1,8 @@
-﻿drkns 21.09.2014 15:58:34 +0200 - build 4117
+﻿drkns 22.09.2014 19:21:31 +0200 - build 4118
+
+1. #0002804: PN_CHECKMASK не распознает неправильные регексы в 3.0.4117
+
+drkns 21.09.2014 15:58:34 +0200 - build 4117
 
 1. Оптимизация make_vector.
 
